# sqlpp11

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CREDITS  ChangeLog.md  LICENSE  README.md  alias.h  assignment_list.h  column.h  column_fwd.h  connection.h  coveralls  datatypes.py  expression.h  from.h  having.h  insert.h  limit.h  no_value.h  noop.h  noop_fwd.h  numeric.h  order_by.h  pre-commit  raw_result_row.h  select.h  select_expression_list.h  select_flag_list.h  select_pseudo_table.h  sqlpp11.kdev4  text.h  transaction.h  type_traits.h  using.h  wishlist.md
examples/: CMakeLists.txt  InsertTest.cpp  README.md  RemoveTest.cpp  Sample.h  SelectTest.cpp  TabSample.h  UpdateTest.cpp  compile.sh  insert.cpp  ppgen.cpp  remove.cpp  sample.cpp  sample.sql  select.cpp  update.cpp
examples/connection_pool/: CMakeLists.txt
examples/connection_pool/src/: db_connection.cpp  db_connection.h  db_global.cpp  db_global.h  main.cpp
examples/ppgen/: ppgen.cpp
examples/usage_fetch_content/: CMakeLists.txt
examples/usage_fetch_content/dependencies/: CMakeLists.txt
examples/usage_fetch_content/src/: CMakeLists.txt  main.cpp
examples/usage_find_package/: CMakeLists.txt
examples/usage_find_package/src/: CMakeLists.txt
src/mysql/: CMakeLists.txt  bind_result.cpp  char_result.cpp  connection.cpp  connection.cpp.orig  prepared_statement.cpp  sqlpp-mysql-config.cmake.in
src/mysql/detail/: connection_handle.cpp  connection_handle.h  prepared_statement_handle.h  result_handle.h
src/sqlite3/: CMakeLists.txt  bind_result.cpp  connection.cpp  prepared_statement.cpp
src/sqlite3/detail/: connection_handle.cpp  connection_handle.h  dynamic_libsqlite3.cpp  prepared_statement_handle.h
test_constraints/: CMakeLists.txt  count_of_count.cpp  max_of_max.cpp  must_not_insert.cpp  must_not_update.cpp  no_conversion_operator_if_null_not_trivial.cpp  require_insert.cpp
test_scripts/: CMakeLists.txt  ddl2cpp.cpp  ddl2cpp_sample_bad.sql  ddl2cpp_sample_good.sql  ddl2cpp_util.h  sample.cpp
tests/: Aggregates.cpp  BooleanExpression.cpp  BooleanExpressionTest.cpp  CMakeLists.txt  CustomQuery.cpp  CustomQueryTest.cpp  DateTime.cpp  Function.cpp  FunctionTest.cpp  Insert.cpp  InsertAsync.cpp  InsertTest.cpp  Interpret.cpp  InterpretTest.cpp  Minimalistic.cpp  MockConfig.h  MockDb.h  Ppgen.cpp  Prepared.cpp  PreparedTest.cpp  Remove.cpp  RemoveAsync.cpp  RemoveTest.cpp  Result.cpp  ResultTest.cpp  Sample.h  Select.cpp  SelectAsync.cpp  SelectTest.cpp  SelectType.cpp  SelectTypeTest.cpp  TabSample.h  ThreadPool.cpp  Union.cpp  UnionTest.cpp  Update.cpp  UpdateAsync.cpp  UpdateTest.cpp  With.cpp  WithTest.cpp  (+4 more)
tests/core/: CMakeLists.txt
tests/core/compat/: CMakeLists.txt  make_unique.cpp
tests/core/constraints/: CMakeLists.txt  count_of_count.cpp  max_of_max.cpp  must_not_insert.cpp  must_not_update.cpp  require_insert.cpp
tests/core/helpers/: CMakeLists.txt  circular_buffer.cpp
tests/core/serialize/: Any.cpp  As.cpp  Avg.cpp  Blob.cpp  CMakeLists.txt  Count.cpp  CurrentDate.cpp  CurrentTime.cpp  CurrentTimestamp.cpp  CustomQuery.cpp  DynamicWhere.cpp  Exists.cpp  Float.cpp  ForUpdate.cpp  From.cpp  In.cpp  Insert.cpp  IsNotNull.cpp  IsNull.cpp  Lower.cpp  Max.cpp  Min.cpp  Operator.cpp  Over.cpp  Parameter.cpp  ParameterizedVerbatim.cpp  SelectAs.cpp  SelectColumns.cpp  SelectFlags.cpp  Some.cpp  Sum.cpp  TableAlias.cpp  Trim.cpp  Upper.cpp  Where.cpp  compare.h  logical_expression.cpp
tests/core/static_asserts/: AssertTables.h  CMakeLists.txt  aggregates.cpp  case.cpp  date.cpp  date_time.cpp  from.cpp  having.cpp  in.cpp  insert.cpp  join.cpp  no_self_compare.cpp  text.cpp  unwrapped_bool.cpp  update_list.cpp  where.cpp
tests/core/types/: CMakeLists.txt  README  aggregate_function.cpp  aggregate_functions.cpp  any.cpp  arithmetic_expression.cpp  assign_expression.cpp  case_when.cpp  comparison_expression.cpp  dynamic.cpp  in_expression.cpp  logical_expression.cpp  result_row.cpp  select_as.cpp  value.cpp
tests/core/usage/: CMakeLists.txt  CustomQuery.cpp  DateTime.cpp  DateTimeParser.cpp  Function.cpp  Insert.cpp  Interpret.cpp  Minimalistic.cpp  MockDb.h  Ppgen.cpp  Prepared.cpp  Remove.cpp  Result.cpp  Sample.h  Select.cpp  SelectType.cpp  Union.cpp  Update.cpp  With.cpp  is_regular.h  sample.sql
tests/include/: ConnectionPoolTests.h  ConnectionTests.h  TabDepartment.h  tab_department.h  tab_department.sql  test_helpers.h
tests/mysql/: CMakeLists.txt
tests/mysql/constraints/: CMakeLists.txt
tests/mysql/serialize/: CMakeLists.txt  Float.cpp  compare.h
tests/mysql/usage/: CMakeLists.txt  Connection.cpp  ConnectionPool.cpp  CustomQuery.cpp  DateTime.cpp  DateTimeTest.cpp  DeleteFrom.cpp  DynamicSelect.cpp  DynamicSelectTest.cpp  Execute.cpp  Json.cpp  JsonTest.cpp  MoveConstructor.cpp  MoveConstructorTest.cpp  OnDuplicateKeyUpdate.cpp  Prepared.cpp  PreparedTest.cpp  Remove.cpp  RemoveTest.cpp  Sample.cpp  SampleTest.cpp  Select.cpp  SelectTest.cpp  TabJson.h  TabJson.sql  TabSample.h  TabSample.sql  Tables.h  Tables.sql  Truncated.cpp  TruncatedTest.cpp  Union.cpp  UnionTest.cpp  Update.cpp  UpdateTest.cpp  make_test_connection.h
tests/postgresql/: CMakeLists.txt
tests/postgresql/constraints/: CMakeLists.txt  OnConflictEmptyWhereDoUpdate.cpp  OnConflictInvalidAssignmentsDoUpdate.cpp  OnConflictInvalidParameter.cpp  OnConflictInvalidWhereDoUpdate.cpp  OnConflictMissingAction.cpp  OnConflictMissingAssignmentsDoUpdate.cpp  OnConflictMissingParameterDoUpdate.cpp  ReturningEmptyAssert.cpp  ReturningInvalidArgument.cpp
tests/postgresql/serialize/: CMakeLists.txt  Float.cpp  compare.h
tests/postgresql/types/: CMakeLists.txt
tests/postgresql/usage/: Basic.cpp  (+26 more)
tests/scripts/: CMakeLists.txt  custom_types.csv  ddl2cpp_sample_bad_type_booltype.sql  ddl2cpp_sample_bad_type_invalid.sql  ddl2cpp_sample_bad_type_serial5.sql  ddl2cpp_sample_bad_type_typeint.sql  ddl2cpp_sample_good.sql  ddl2cpp_sample_good_custom_type.cpp  ddl2cpp_sample_good_custom_type.sql  sample.cpp  sample_identity_naming.cpp
tests/sqlite3/: CMakeLists.txt
(+1320 files in other folders)
